remove Guava as much as possible as it is not needed anymore