@@ -10,7 +10,6 @@ import au.com.mineauz.minigames.script.ScriptReference;
 import au.com.mineauz.minigamesregions.Node;
 import au.com.mineauz.minigamesregions.Region;
 import au.com.mineauz.minigamesregions.util.NullCommandSender;
-import com.google.common.collect.ImmutableSet;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.configuration.file.FileConfiguration;
@@ -82,7 +81,7 @@ public class ExecuteCommandAction extends AbstractAction {
         ScriptObject base = new ScriptObject() {
             @Override
             public Set<String> getKeys() {
-                return ImmutableSet.of("player", "area", "minigame", "team");
+                return Set.of("player", "area", "minigame", "team");
             }
 
             @Override
@@ -124,7 +123,7 @@ public class ExecuteCommandAction extends AbstractAction {
         ScriptObject base = new ScriptObject() {
             @Override
             public Set<String> getKeys() {
-                return ImmutableSet.of("player", "area", "minigame", "team");
+                return Set.of("player", "area", "minigame", "team");
             }
 
             @Override
